--attr warning unused value
simplify expre with ||
doc for vec and map
more adt hyperloglog?
macro one line with impl later